connect overlap fixed

--- a/SUBPAGE/reg/css/style.css
+++ b/SUBPAGE/reg/css/style.css
@@ -324,7 +324,7 @@ a span {
 }
 .connect p {
   position: absolute;
-  left: 42px;
+  left: 30px;
   top: 155px;
   display: flex;
   flex-direction: column;
@@ -332,6 +332,8 @@ a span {
   transform: rotate(90deg);
   font-weight: bold;
   color: rgba(255, 255, 255, 0.3);
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 3px;
 }
 .connect:hover {
   transform: translate(0%);
@@ -350,7 +352,7 @@ a span {
   }
   .connect p {
     position: absolute;
-    left: 25px;
+    left: 15px;
     top: 150px;
     display: flex;
     font-weight: bold;
